fixed spacing on comment cards:

--- a/client/src/styles/components/comment.css
+++ b/client/src/styles/components/comment.css
@@ -8,7 +8,7 @@
   background-color: rgba(0, 0, 0, 0.637);
   padding: 10px;
   width: 80vw;
-  margin: 60px;
+  margin-top: 20px;
   display: flex;
   border-radius: 20px;
   justify-content: space-between;
